- movie rtb has its own event handler


2016.11.28
- "to do" tab and "to do" + "reminders" subtabs created
- attached rtb event handler to "to do" mouse doubleclick
- temporarily turning "Flush" button into RTB resource saver


2016.11.29
- in process of outputting rtb contents to associated resource file


2016.11.30
- using rtb.LoadFile(...) instead of "rtb.Text = Properties..."
	- on first build, loads contents from original resource content file
	- on subsequent runs+loads, saved content persists and is loaded into rtb
	- "rtb.Text = Properties..." load the string inside the original resource file, rather than persistent file
	- cleaning the solution will deploy the resource files again


2016.12.01
- finished "Save All" and "Save All and Exit"
- working on flush button
	- using array (activearray) to indicate which tab is currently active
	- SelectedIndexChanged is an array of 0s with a single 1, 1 indicating the active tab, 0 for all inactive tabs
	    0: td_reminders, 1: td_td, 2: music_all, 3: music_ind, 4: music_met
        5: links_all, 6: links_yt, 7: links_arts, 8: movies
	- allow content flushed to tab whose contents aren't open?


2016.12.02
- allowed content flushed to tab whose contents aren't open
	- appended text to end of file associated to selected tab
	append:
	https://msdn.microsoft.com/en-us/library/system.io.file.appendtext%28v=vs.110%29.aspx
	appendall
	https://msdn.microsoft.com/en-us/library/ms143356%28v=vs.110%29.aspx
	- newline in windows is '\r\n'
- implementing a status bar to give indication which tabpage is open (problem if tab page isn't active)
	how to make status bar show text:
	http://stackoverflow.com/questions/13336290/how-to-update-statusstrip-in-windows-forms
	also, have status bar docked at bottom otherwise text doesn't appear
- removing debugging statements and shifting it to status bar
- refactoring NDFlush to a shorter version using reflection


2016.12.03
- refactored NDFlush code disappeared; rewrote it